# ClipSage

./: .gitignore  README.md  README_COMPLETE.md  READY_FOR_OPENSOURCE.md  SECURITY_CHECKLIST.md  __main__.py  pyproject.toml  quick_setup.sh  requirements.txt  start_clipsage.sh
clipsage/: __init__.py
clipsage/backend/: CMakeLists.txt  __init__.py  clipboard_manager.py  main.cpp
clipsage/core/: __init__.py  config.py  semantic_search.py
clipsage/gui/: __init__.py  main_window.py  widgets.py
docs/: ARCHITECTURE.md  GIT_SETUP.md  INSTALL.md  PERFORMANCE.md  RUNNING.md
packaging/deb/DEBIAN/: control  postinst
packaging/snap/: snapcraft.yaml
scripts/: install.sh  performance_test.py
tests/: __init__.py  test_semantic_search.py
